<resources>
    <string name="app_name">Al Irsyad EDU</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_login">Login</string>
    <string name="title_email">Email</string>
    <string name="title_password">Password</string>
    <string name="title_nis">NIS/Email</string>
    <string name="title_course_in_progress">Mata Pelajaran yang Sedang Dipelajari</string>
    <string name="title_course_up_coming">Mata Pelajaran  yang Akan Datang</string>
    <string name="title_simulation">Nilai Simulasi</string>
    <string name="title_simulation_summary">Simulasi</string>
    <string name="title_courses">Mata Pelajaran</string>
    <string name="title_account">Akun</string>
    <string name="title_name">Nama</string>
    <string name="title_class">Active Class</string>
    <string name="title_course_in_progress_value">Progress Belajar</string>
    <string name="title_module">Modul</string>
    <string name="title_video">Video</string>
    <string name="title_continue_learning">Lanjut Belajar</string>
    <string name="title_learning_module">Learning Module</string>
    <string name="title_learning_video">Learning Video</string>
    <string name="title_learning_simulation">Learning Simulation</string>
    <string name="title_skip">Skip</string>
    <string name="title_next">Next</string>
    <string name="title_forgot_password">Forgot Password?</string>
    <string name="title_register">Register</string>
    <string name="title_username">Username</string>
    <string name="title_undo">Undo</string>
    <string name="title_color">Color</string>
    <string name="title_redo">Redo</string>
    <string name="title_clear">Clear</string>
    <string name="title_eraser">Delete</string>
    <string name="title_logout">Logout</string>
    <string name="title_activity_playing_simulation">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_modul_prev">Modul Sebelumnya</string>
    <string name="title_modul_next">Modul Berikutnya</string>
    <string name="title_modul_finish">Selesai</string>
    <string name="title_no_data_module">Belum ada data</string>
    <string name="title_phone">No Telepon</string>
    <string name="title_confirm_password">Konfirmasi Password</string>
    <string name="title_jenjang">Pilih Jenjang</string>
    <string name="title_jenjang2">Jenjang</string>
    <string name="title_course_done">" Mata Pelajaran yang Sudah Dipelajari "</string>
    <string name="finished_studying">Selesai Dipelajari</string>
    <string name="choose_level">Pilih Jenjang</string>
    <string name="learn_today">Mau belajar apa hari ini ?</string>
    <string name="new_update">Update Terbaru</string>
    <string name="title_all_courses">Semua Mata Pelajaran</string>
    <string name="text_ok">OK</string>
    <string name="change_password">Ubah Password</string>
    <string name="current_password">Password Saat ini</string>
    <string name="new_password">Password Baru</string>
    <string name="password_confirmation">Konfirmasi Password</string>
    <string name="save">Simpan</string>
    <string name="empty" />
    <string name="change_profile_photo">Ubah Photo Profile"</string>
    <string name="loading">Loading...</string>
    <string name="halo_text">Hallo, </string>
    <string name="title_assalamualaikum">Assalamualaikum</string>
    <string name="title_login_subtitle">Please fill this form to continue Login</string>
    <string name="title_subtitle_login_student">as a Student</string>
    <string name="title_subtitle_login_visitor">as a Visitor</string>
    <string name="title_tab_login_student">As Student</string>
    <string name="title_tab_login_visitor">As Visitor</string>
    <string name="title_error_login_student">Your NIS or Password is incorrect. Try Again</string>
    <string name="title_edit_text_error">This field is required</string>
    <string name="title_form_fullname">Fullname</string>
    <string name="title_form_nis">NIS</string>
    <string name="title_form_hint_nis">Type your NIS</string>
    <string name="title_form_hint_nis_password">Type your Password</string>
    <string name="title_register_visitor">Register as Visitor</string>
    <string name="title_form_hint_email">Type your Email</string>
    <string name="title_login_or">or</string>
    <string name="title_form_hint_fullname">Type your fullname</string>
    <string name="title_form_hint_phone">Type your phone number</string>
    <string name="title_form_phone">Phone Number</string>
    <string name="title_form_confirm_password">Confirm Your Password</string>
    <string name="title_form_hint_confirm_password">Confirm your password</string>
    <string name="title_form_hint_level">Choose your level</string>
    <string name="title_form_level">Choose your level</string>
    <string name="title_register_subtitle">Please fill this form to create a new account</string>
    <string name="title_e_report">E-Report</string>
    <string name="title_achieve">Achieve</string>
    <string name="title_profile">Profile</string>
    <string name="title_subject">Subject</string>
    <string name="title_class_of_1st">Class of %1$s</string>
    <string name="title_your_achievement">Your Achievement</string>
    <string name="title_subject_of_class">Subject of Class</string>
    <string name="title_updated_subject">Updated Subject</string>
    <string name="title_image">image</string>
    <string name="title_see_all">See All</string>
    <string name="title_menu_more">More</string>
    <string name="title_search_subject">Search Subject</string>
    <string name="title_personal_information">Personal Information</string>
    <string name="title_personal_information_sub">NIS, Name, Password, Class</string>
    <string name="title_content_description">Image Content Description</string>
    <string name="title_privacy_and_policy"><![CDATA[Privacy & Policy]]></string>
    <string name="title_privacy_and_policy_sub"><![CDATA[All Privacy & Policy about this app]]></string>
    <string name="title_subject_achievement">Subject Achievement</string>
    <string name="title_your_score">Your Score</string>
    <string name="title_get_started">Get Started</string>
    <string name="title_reset_password">Reset Password</string>
    <string name="title_reset_password_subtitle">Input your active email to recovery your password</string>
    <string name="title_submit">Submit</string>
    <string name="title_success_sending_email">Whoosh..</string>
    <string name="title_sub_success_sending_email">Please check your email, we were sent you the link to verify your account</string>
    <string name="title_success_account_verified">Yeay! Account is Verified</string>
    <string name="title_sub_success_account_verified">Congratulation your account already verified and enjoy the app.</string>
    <string name="title_success_nis_forgot_password">Your NIS is Sent</string>
    <string name="title_sub_success_forgot_password">Takes time to admin reset your password</string>
    <string name="title_success_email_forgot_password">Email Sent</string>
    <string name="title_sub_success_email_forgot_password">We sent an email to your email with a link to get a recovery of your account</string>
    <string name="title_reset_password_cannot_get_link">Didn’t get a link?</string>
    <string name="title_reset_password_resend">Resend</string>
    <string name="title_change_password">Change Password</string>
    <string name="title_change_password_subtitle">Change your password to recovery your account</string>
    <string name="title_error_internet_connection">Oops! You seem to be offline</string>
    <string name="title_error_message_internet_connection">Please check your WiFi connection or cellular data and try again.</string>
    <string name="title_btn_error_go_to_settings">Go to Setting</string>
    <string name="title_btn_error_try_again">Try Again</string>
    <string name="title_btn_error_contact_cs">Contact CS</string>
    <string name="title_btn_error_close_app">Close App</string>
    <string name="title_btn_error_lets_update">Let’s Update</string>
    <string name="title_btn_error_later">Let’s Update</string>
    <string name="title_btn_yes_sure">Yes, Sure</string>
    <string name="title_btn_no_im_not">No, I’m not</string>
    <string name="title_btn_no_im_sure">I’m Sure</string>
    <string name="title_btn_check_again">Check Again</string>
    <string name="title_error_proccess_data">Oops! Failed to Process Data</string>
    <string name="title_error_message_proccess_data">Please try again to continue processing the Data</string>
    <string name="title_error_technical">Oh no! There was a Technical Error</string>
    <string name="title_error_message_technical">We were sorry for you, but you can try again later</string>
    <string name="title_update_version">Wohoo! New Version is Ready</string>
    <string name="title_update_version_message">Start updating your application to enjoy the best features</string>
    <string name="title_error_system_error">Oh No! System Error</string>
    <string name="title_error_system_error_message">We were sorry for you, but you can try again later</string>
    <string name="title_error_logout">Are you sure want to logout?</string>
    <string name="title_error_logout_message">We will miss you if you want to logout from this account</string>
    <string name="title_error_please_check_data_again">Please check your data again</string>
    <string name="title_error_please_check_data_again_message">Please make sure your email is correct before submit the registration</string>
    <string name="title_error_login_failed">Oops! Login Failed</string>
    <string name="title_error_waiting_reset_password_message">Please wait for the admin to reset your password.</string>
    <string name="title_error_login_failed_message_student">Your NIS or Password is incorrect. Try Again</string>
    <string name="title_error_login_failed_message_visitor">Your Email or Password is incorrect. Try Again</string>
    <string name="title_loading">Loading...</string>
    <string name="title_privacy_and_policy_camera_des">• Take pictures and video</string>
    <string name="title_privacy_and_policy_camera">Camera</string>
    <string name="title_privacy_and_policy_location">location</string>
    <string name="title_privacy_and_policy_location_des">• Access precise location (GPS and network-based) \n• Access approximate location (network-based)</string>
    <string name="title_privacy_and_policy_storage">Storage</string>
    <string name="title_privacy_and_policy_storage_des">• Read the content of your SD Card\n• Modify or delete SD Card Content</string>
    <string name="title_privacy_and_policy_others">Others</string>
    <string name="title_privacy_and_policy_others_des">• Advertising ID Permission \n• Have full network access \n• View network connection \n• Prevent phone from sleeping \n• Play install reference API</string>
    <string name="title_no_update_subject">No Updated Subject</string>
    <string name="title_no_update_subject_content">We’re sorry there is no updated subject here and try again later</string>
    <string name="title_reset_password_subtitle_student">Input your NIS to recovery your password</string>
    <string name="title_previous_password">Previous Password</string>
    <string name="title_form_hint_previous_password">Write previous password</string>
    <string name="title_form_hint_new_password">Write new password</string>
    <string name="title_new_password">New Password</string>
    <string name="title_confirm_new_password">Confirm New Password</string>
    <string name="title_form_hint_confirm_new_password">Confirm new password</string>
    <string name="title_save_changes">Save Changes</string>
</resources>