<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_home"
        android:enabled="true"
        android:title="@string/title_home"
        android:icon="@drawable/ic_home"/>
    <item
        android:id="@+id/menu_subject"
        android:enabled="true"
        android:title="@string/title_subject"
        android:icon="@drawable/ic_subject_new"/>
    <item
        android:id="@+id/menu_report"
        android:enabled="true"
        android:title=""/>

    <item
        android:id="@+id/menu_achieve"
        android:enabled="true"
        android:title="@string/title_achieve"
        android:icon="@drawable/ic_achieve"/>

    <item
        android:id="@+id/menu_profile"
        android:enabled="true"
        android:title="@string/title_profile"
        android:icon="@drawable/ic_profile"/>
</menu>