<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterActivity">

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_24sdp"
        android:drawablePadding="@dimen/_16sdp"
        android:fontFamily="@font/bold"
        android:text="@string/title_register"
        android:textColor="@color/white"
        android:textSize="@dimen/_24ssp"
        android:visibility="gone"
        app:drawableStartCompat="@drawable/ic_toolbar_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_0sdp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_login">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/_34sdp">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_50sdp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/title_assalamualaikum"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_24ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/title_register_subtitle"
                android:textColor="@color/neutral_70"
                android:textSize="@dimen/_16ssp"
                android:gravity="center"
                android:layout_marginStart="@dimen/_24sdp"
                android:layout_marginEnd="@dimen/_24sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title" />

            <TextView
                android:id="@+id/tv_subtitle_login_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_24sdp"
                android:layout_marginEnd="@dimen/_24sdp"
                android:fontFamily="@font/poppins_semi_bold"
                android:gravity="center"
                android:text="@string/title_subtitle_login_visitor"
                android:textColor="@color/neutral_70"
                android:textSize="@dimen/_18ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_subtitle" />

            <com.alirsyad.app.component.editext.DibEditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:inputType="text"
                app:isPassword="false"
                app:titleHint="@string/title_form_hint_fullname"
                app:titleHeader="@string/title_form_fullname"
                app:layout_constraintTop_toBottomOf="@+id/tv_subtitle_login_type"/>

            <com.alirsyad.app.component.editext.DibEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:inputType="textEmailAddress"
                app:isPassword="false"
                app:titleHint="@string/title_form_hint_email"
                app:titleHeader="@string/title_email"
                app:layout_constraintTop_toBottomOf="@+id/et_name"/>

            <com.alirsyad.app.component.editext.DibEditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:inputType="phone"
                app:isPassword="false"
                android:maxLength="13"
                app:titleHint="@string/title_form_hint_phone"
                app:titleHeader="@string/title_form_phone"
                app:layout_constraintTop_toBottomOf="@+id/et_email"/>

            <com.alirsyad.app.component.editext.DibEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:inputType="textPassword"
                app:titleHint="@string/title_form_hint_nis_password"
                app:titleHeader="@string/title_password"
                app:isPassword="true"
                app:layout_constraintTop_toBottomOf="@+id/et_phone"/>

            <com.alirsyad.app.component.editext.DibEditText
                android:id="@+id/et_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:inputType="textPassword"
                app:titleHint="@string/title_form_hint_confirm_password"
                app:titleHeader="@string/title_form_confirm_password"
                app:isPassword="true"
                app:layout_constraintTop_toBottomOf="@+id/et_password"/>

            <com.alirsyad.app.component.dropdown.DibSpinner
                android:id="@+id/et_level"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                app:titleSpinner="@string/title_form_hint_level"
                app:titleHeaderSpinner="@string/title_form_level"
                app:layout_constraintTop_toBottomOf="@+id/et_confirm_password"/>

            <com.alirsyad.app.component.button.DibButton
                android:id="@+id/btn_registration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                app:buttonText="@string/title_register"
                app:layout_constraintTop_toBottomOf="@+id/et_level"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.alirsyad.app.component.customview.DibSuccessView
        android:id="@+id/dib_success"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"/>

    <com.alirsyad.app.component.customview.DibLoading
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>