<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.changedpassword.ChangedPasswordActivity">

    <com.alirsyad.app.component.toolbar.DibToolbarSubFeatures
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:paddingBottom="@dimen/_16sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

       <androidx.constraintlayout.widget.ConstraintLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent">

           <com.alirsyad.app.component.editext.DibEditText
               android:id="@+id/et__prev_password"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:fontFamily="@font/regular"
               android:inputType="textPassword"
               app:titleHint="@string/title_form_hint_previous_password"
               app:titleHeader="@string/title_previous_password"
               app:isPassword="true"
               app:layout_constraintTop_toTopOf="parent"/>

           <com.alirsyad.app.component.editext.DibEditText
               android:id="@+id/et_new_password"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:fontFamily="@font/regular"
               android:inputType="textPassword"
               app:titleHint="@string/title_form_hint_new_password"
               app:titleHeader="@string/title_new_password"
               app:isPassword="true"
               app:layout_constraintTop_toBottomOf="@+id/et__prev_password"/>

           <com.alirsyad.app.component.editext.DibEditText
               android:id="@+id/et_confirm_new_password"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:fontFamily="@font/regular"
               android:inputType="textPassword"
               app:titleHint="@string/title_form_hint_confirm_new_password"
               app:titleHeader="@string/title_confirm_new_password"
               app:isPassword="true"
               app:layout_constraintTop_toBottomOf="@+id/et_new_password"/>

       </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.alirsyad.app.component.customview.DibLoading
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.alirsyad.app.component.button.DibButton
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        app:buttonText="@string/title_save_changes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>