<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

  <ImageView
      android:id="@+id/iv_back"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:src="@drawable/ic_back"
      app:tint="@color/neutral_60"
      android:padding="30dp"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      android:contentDescription="@string/title_content_description" />

  <TextView
      android:id="@+id/tv_login"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/_92sdp"
      android:fontFamily="@font/poppins_bold"
      android:text="@string/title_reset_password"
      android:textColor="@color/colorPrimary"
      android:textSize="@dimen/_24ssp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/tv_subtitle"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:fontFamily="@font/poppins_regular"
      android:text="@string/title_reset_password_subtitle_student"
      android:textColor="@color/neutral_70"
      android:textSize="@dimen/_16ssp"
      android:gravity="center"
      android:layout_marginStart="@dimen/_24sdp"
      android:layout_marginEnd="@dimen/_24sdp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tv_login" />

  <com.alirsyad.app.component.editext.DibEditText
      android:id="@+id/et_nis"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:fontFamily="@font/regular"
      android:inputType="number"
      android:maxLength="10"
      app:isPassword="false"
      app:titleHint="@string/title_form_hint_nis"
      app:titleHeader="@string/title_form_nis"
      app:layout_constraintTop_toBottomOf="@+id/tv_subtitle"/>

  <com.alirsyad.app.component.button.DibButton
      android:id="@+id/btn_forgot"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/_30sdp"
      app:buttonText="@string/title_submit"
      app:layout_constraintTop_toBottomOf="@+id/et_nis"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"/>

  <com.alirsyad.app.component.customview.DibSuccessView
      android:id="@+id/dib_success"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:visibility="gone"/>

  <com.alirsyad.app.component.customview.DibLoading
      android:id="@+id/loading"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      app:loadingType="with_background"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>