<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mt_toolbar_sub_features"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    android:gravity="center"
    android:layout_gravity="center_vertical"
    android:visibility="visible"
    android:layout_margin="@dimen/_32sdp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_update_subject_empty"
        android:contentDescription="@string/title_content_description"/>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:textSize="@dimen/_16ssp"
        android:layout_marginTop="@dimen/_24sdp"
        android:text="@string/title_no_update_subject"/>

    <TextView
        android:id="@+id/tv_sub_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:textSize="@dimen/_14ssp"
        android:gravity="center"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/title_no_update_subject_content"/>
</LinearLayout>